--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>FrancoBusinness</title>
-  <base href="./">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.6ad2e3e1c2c0d0bfb9af.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.9f12a8a25c383060917a.js" defer></script><script src="main.2cb3ad6531f0c67e24a8.js" defer></script></body>
+  <head>
+    <meta charset="utf-8"/>
+    <title>FrancoBusinness</title>
+    <base href="./"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <style>
+      .kofi {
+        display: block !important;
+        position: fixed;
+        z-index: 999;
+        left: 0px;
+        top: 0px;
+      }
+    </style>
+  <link rel="stylesheet" href="styles.6ad2e3e1c2c0d0bfb9af.css"></head>
+  <body>
+    <div class="kofi">
+      <!-- <script
+      type="text/javascript"
+      src="https://ko-fi.com/widgets/widget_2.js"
+    ></script>
+    <script type="text/javascript">
+      kofiwidget2.init("Support Me on Ko-fi", "#29abe0", "T6T334G5F");
+      kofiwidget2.draw();
+    </script> -->
+      <script type="text/javascript" src="https://ko-fi.com/widgets/widget_2.js"></script>
+      <script type="text/javascript">
+        kofiwidget2.init("Support Me on Ko-fi!!", "#de257c", "S6S12OUNI");
+        kofiwidget2.draw();
+      </script>
+    </div>
+    <app-root></app-root>
+  <script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.9f12a8a25c383060917a.js" defer></script><script src="main.ea0b9dcc83a1f4fcdfa1.js" defer></script></body>
 </html>
