--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>FrancoBusinness</title>
+    <title>FrancoBusinness - Comms</title>
     <base href="./"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
@@ -33,5 +33,5 @@
       </script>
     </div>
     <app-root></app-root>
-  <script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.9f12a8a25c383060917a.js" defer></script><script src="main.ea0b9dcc83a1f4fcdfa1.js" defer></script></body>
+  <script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.9f12a8a25c383060917a.js" defer></script><script src="main.8617e7b304ab2c192755.js" defer></script></body>
 </html>
